Create Form Dynamically.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Libro</title>
 </head>
 <body>
-    <div class="col">
+    <!-- <div class="col">
         <label for="title">Book Title</label>
         <input type="text" id="title" placeholder="Book Title">
     </div>
@@ -43,7 +43,8 @@
         <tbody class="table-body">
 
         </tbody>
-    </table>
-    <script src="./src/js/app.js"></script>
+    </table> -->
+    <div id="content"></div>
+    <script type="module" src="./src/js/app.js"></script>
 </body>
 </html>
